# electricity-costs-dkk

./: README.md  pyproject.toml
src/electricity_costs_dkk/: __init__.py  __main__.py  app.py  config.toml
